# wsi

./: .coverage-tmp.html  .dockerignore  .editorconfig  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .zenodo.json  404.html  Dockerfile  LICENSE  README.md  create_class_page.py  docker-compose.yaml  index.html  mkdocs.yml  model_file.yaml  objects.inv  pyproject.toml  requirements-demos.txt  requirements-dev.txt  requirements-doc.txt  requirements.txt  requirements_demos.txt  requirements_documentation.txt  setup.py  sitemap.xml
.github/workflows/: auto-merge.yaml  ci.yml  draft-pdf.yml  publish.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
component-library/: index.html
coverage/: covindex.html  d_158041b68a4502ad___init___py.html  d_158041b68a4502ad_catchment_py.html  d_158041b68a4502ad_demand_py.html  d_158041b68a4502ad_distribution_py.html  d_158041b68a4502ad_land_py.html  d_158041b68a4502ad_nodes_py.html  d_158041b68a4502ad_nutrient_pool_py.html  d_158041b68a4502ad_sewer_py.html  d_158041b68a4502ad_storage_py.html  d_158041b68a4502ad_waste_py.html  d_158041b68a4502ad_wtw_py.html  d_25ad043d4b12fa4d___init___py.html  d_25ad043d4b12fa4d_arcs_py.html  d_4066e2e9c5ff2ca2___init___py.html  d_4066e2e9c5ff2ca2___main___py.html  d_4066e2e9c5ff2ca2_validation_py.html  d_69d1e420588dcae8___init___py.html  d_69d1e420588dcae8_constants_py.html  d_69d1e420588dcae8_core_py.html  d_6bf6edd3c59a51e0___init___py.html  d_6bf6edd3c59a51e0_arcs_py.html  d_6ec73b59dbcc63d6___init___py.html  d_6ec73b59dbcc63d6_create_oxford_py.html  d_9a37b58ebc825f5f___init___py.html  d_9a37b58ebc825f5f_model_py.html  d_a44f0ac069e85531_test_arcs_py.html  d_a44f0ac069e85531_test_catchment_py.html  d_a44f0ac069e85531_test_core_py.html  d_a44f0ac069e85531_test_demand_py.html  d_a44f0ac069e85531_test_distribution_py.html  d_a44f0ac069e85531_test_land_py.html  d_a44f0ac069e85531_test_model_py.html  d_a44f0ac069e85531_test_nodes_py.html  d_a44f0ac069e85531_test_sewer_py.html  d_a44f0ac069e85531_test_storage_py.html  d_a44f0ac069e85531_test_wtw_py.html  d_ec0c1cec12cfbde3___init___py.html  d_ec0c1cec12cfbde3_model_py.html  d_efebb5459ca878b8___init___py.html  (+15 more)
dafni/: index.html
demo/data/processed/: arcs.geojson  nodes.geojson
demo/data/raw/: 39008_cdr.csv  39008_gdf.csv  39021_gdf.csv  39034_gdf.csv  CEHThamesInitiative_WaterQualityData_2009-2013.csv  mixer_wims_val.csv  points_locations.geojson
demo/scripts/custom_distribution_handler/: index.html
demo/scripts/custom_fwtw_pull/: index.html
demo/scripts/custom_reservoir_handler/: index.html
demo/scripts/customise_a_node/: index.html
demo/scripts/customise_an_arc/: index.html
demo/scripts/customise_interactions/: index.html
demo/scripts/customise_riverreservoir/: index.html
demo/scripts/land_demo/: index.html
demo/scripts/oxford_demo/: index.html
demo/scripts/quickstart_demo/: index.html
docs/: CONTRIBUTING.md  component-library.md  component_catalogue.md  create_class_page.py  dafni.md  extending_wsimod.md  how-to.md  index.md  installation.md  orchestration.md  reference-arc.md  reference-core.md  reference-extensions.md  reference-land.md  reference-model.md  reference-nodes.md  reference-other.md  reference-sewer.md  reference-storage.md  reference-wetland.md  reference-wtw.md  reference.md  tutorials.md  wsimod-cli.md  wsimod_models.md
docs/demo/scripts/: cherwell_demo.py  (+15 more)
docs/paper/: paper.bib  paper.md
docs/stylesheets/: extra.css
extending_wsimod/: index.html
how-to/: index.html
installation/: index.html
paper/: paper.bib  wsimod-gpt-response.txt  wsimod-gpt.txt
paper/paper/: index.html
reference/: index.html
reference-arc/: index.html
reference-core/: index.html
reference-extensions/: index.html
reference-land/: index.html
reference-model/: index.html
reference-nodes/: index.html
reference-other/: index.html
reference-sewer/: index.html
reference-storage/: index.html
reference-wtw/: index.html
search/: search_index.json
tests/: custom_class.py  run_all_tests.py  test_arcs.py  test_catchment.py  test_core.py  test_data_loading.py  test_demand.py  test_distribution.py  test_example_files.py  test_extensions.py  test_land.py  test_model.py  test_nodes.py  test_sewer.py  test_storage.py  test_tanks.py  test_tutorials.py  test_wetland.py  test_wtw.py
tests/test_catchment/: config.yml
tutorials/: index.html
wsimod/: __init__.py  __main__.py  extensions.py  validation.py
wsimod-cli/: index.html
wsimod/arcs/: __init__.py  arcs.py
wsimod/core/: __init__.py  constants.py  core.py
wsimod/demo/: create_oxford.py
wsimod/extensions/: extensions.py
wsimod/nodes/: __init__.py  abstraction.py  catchment.py  compartment.py  demand.py  discharge_point.py  distribution.py  groundwater.py  land.py  land_.py  nodes.py  nutrient_pool.py  river.py  ruralland.py  sewer.py  storage.py  tanks.py  waste.py  wetland.py  wtw.py
wsimod/orchestration/: __init__.py  model.py  models.py
wsimod_models/: index.html
(+29 files in other folders)
