[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["htmlcov"] # Exclude the coverage report file from setuptools package finder

[project]
name = "wsimod"
description = "WSIMOD is for simulating water quality and quantity"
readme = "README.md"
version = "0.2.0"
license = {file = "LICENSE"}
authors = [
    { name = "Barnaby Dobson", email = "b.dobson@imperial.ac.uk" },
    { name = "Imperial College London RSE Team", email = "ict-rse-team@imperial.ac.uk" }
]
requires-python = ">=3.9"
dependencies = [
    "PyYAML",
    "tqdm",
    "dill"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "black",
    "ruff",
    "pip-tools",
    "pytest-cov",
]

demos = [
    "pandas",
    "geopandas",
    "matplotlib",
    "shapely"
]

doc = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-autorefs",
    "mkdocs-bibtex",
    "mkdocs-coverage",
    "mkdocs-jupyter",
    "mkdocs-material-extensions",
    "pypandoc",
    "wsimod[demos]"
]

[tool.pytest.ini_options]
addopts = "-v -p no:warnings --cov=wsimod --cov-report=html"

[tool.ruff]
select = ["E", "F", "I"] # pycodestyle, Pyflakes, isort. Ignoring pydocstyle (D), for now
exclude = ["docs", "tests"]  # Let's ignore tests and docs folders, for now

[tool.ruff.per-file-ignores]
"wsimod/*" = ["E501"]  # 176 lines (all comments) are too long (>88). Ignoring, for now

[tool.ruff.pydocstyle]
convention = "google"